Fixed social media links & fixed spacing in features section

--- a/css/main.css
+++ b/css/main.css
@@ -239,6 +239,7 @@ footer .social-icons p {
   justify-content: center;
   align-items: center;
   background: #527158;
+  color: #e2e3e6;
   border-radius: 50%;
   height: 40px;
   width: 40px;
@@ -603,7 +604,7 @@ input[type=button] {
     flex-basis: 50%;
   }
 
-  .features .features-items-description {
+  .features .features-item-description {
     width: 62%;
   }
 
@@ -781,6 +782,11 @@ input[type=button] {
   footer h4 {
     font-size: 1.875em;
   }
+
+  footer .social-icons p i {
+    font-size: 1.3125em;
+  }
+  
 
   /* ==========================================================================
     About Page
